fix(Popover): add overflow-wrap (#226)

--- a/src/components/Popover/Popover.scss
+++ b/src/components/Popover/Popover.scss
@@ -55,6 +55,7 @@ $block: '.#{$ns}popover';
 
         &-content {
             @include text-body-1();
+            overflow-wrap: break-word;
 
             &_secondary {
                 opacity: 0.7;
